wersja 0.2.3 -> Refactor: poprawki metod Main.java i SaveManager.java; poprawki wydajności